--- a/templates/trade.html
+++ b/templates/trade.html
@@ -21,10 +21,10 @@
 			</div>
 			<div class="card_botom">
 				<div class="card_price">1000</div>
-				<a href="" class="card_title">
+				<a href="" class="card_title link-decotarion">
 					Купон
 				</a>
-				<button class="card_trade">Обменять</button>
+				<button class="card_trade custom-button">Обменять</button>
 			</div>
 		</div>
 		{% endfor %}
